COM Piler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> INICIO ID ListaInstrucciones FIN
Rule 2     ListaInstrucciones -> INSTRUCCION
Rule 3     ListaInstrucciones -> ListaInstrucciones INSTRUCCION
Rule 4     INSTRUCCION -> ASIGNACION
Rule 5     INSTRUCCION -> IFINSTR
Rule 6     INSTRUCCION -> WHILEINSTR
Rule 7     INSTRUCCION -> PRINTINSTR
Rule 8     ASIGNACION -> INT ID IGUAL EXPRESION
Rule 9     ASIGNACION -> STRING ID IGUAL CADENA
Rule 10    ASIGNACION -> FLOAT ID IGUAL EXPRESION
Rule 11    EXPRESION -> NUM
Rule 12    EXPRESION -> ID
Rule 13    EXPRESION -> OPERACION
Rule 14    OPERACION -> EXPRESION OPARIT EXPRESION
Rule 15    IFINSTR -> IF CONDICION APERTUPAR ListaInstrucciones CIERREPAR
Rule 16    CONDICION -> APERTUPAR EXPRESION OPRELAC EXPRESION CIERREPAR
Rule 17    WHILEINSTR -> WHILE CONDICION APERTUPAR ListaInstrucciones CIERREPAR
Rule 18    PRINTINSTR -> PRINT APERTUPAR CADENA CIERREPAR
Rule 19    PRINTINSTR -> PRINT APERTUPAR EXPRESION CIERREPAR

Terminals, with rules where they appear

APERTUPAR            : 15 16 17 18 19
CADENA               : 9 18
CIERREPAR            : 15 16 17 18 19
FIN                  : 1
FLOAT                : 10
ID                   : 1 8 9 10 12
IF                   : 15
IGUAL                : 8 9 10
INICIO               : 1
INT                  : 8
NUM                  : 11
OPARIT               : 14
OPRELAC              : 16
PRINT                : 18 19
STRING               : 9
WHILE                : 17
error                : 

Nonterminals, with rules where they appear

ASIGNACION           : 4
CONDICION            : 15 17
EXPRESION            : 8 10 14 14 16 16 19
IFINSTR              : 5
INSTRUCCION          : 2 3
ListaInstrucciones   : 1 3 15 17
OPERACION            : 13
PRINTINSTR           : 7
Programa             : 0
WHILEINSTR           : 6

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . INICIO ID ListaInstrucciones FIN

    INICIO          shift and go to state 2

    Programa                       shift and go to state 1

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> INICIO . ID ListaInstrucciones FIN

    ID              shift and go to state 3


state 3

    (1) Programa -> INICIO ID . ListaInstrucciones FIN
    (2) ListaInstrucciones -> . INSTRUCCION
    (3) ListaInstrucciones -> . ListaInstrucciones INSTRUCCION
    (4) INSTRUCCION -> . ASIGNACION
    (5) INSTRUCCION -> . IFINSTR
    (6) INSTRUCCION -> . WHILEINSTR
    (7) INSTRUCCION -> . PRINTINSTR
    (8) ASIGNACION -> . INT ID IGUAL EXPRESION
    (9) ASIGNACION -> . STRING ID IGUAL CADENA
    (10) ASIGNACION -> . FLOAT ID IGUAL EXPRESION
    (15) IFINSTR -> . IF CONDICION APERTUPAR ListaInstrucciones CIERREPAR
    (17) WHILEINSTR -> . WHILE CONDICION APERTUPAR ListaInstrucciones CIERREPAR
    (18) PRINTINSTR -> . PRINT APERTUPAR CADENA CIERREPAR
    (19) PRINTINSTR -> . PRINT APERTUPAR EXPRESION CIERREPAR

    INT             shift and go to state 10
    STRING          shift and go to state 11
    FLOAT           shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    PRINT           shift and go to state 15

    ListaInstrucciones             shift and go to state 4
    INSTRUCCION                    shift and go to state 5
    ASIGNACION                     shift and go to state 6
    IFINSTR                        shift and go to state 7
    WHILEINSTR                     shift and go to state 8
    PRINTINSTR                     shift and go to state 9

state 4

    (1) Programa -> INICIO ID ListaInstrucciones . FIN
    (3) ListaInstrucciones -> ListaInstrucciones . INSTRUCCION
    (4) INSTRUCCION -> . ASIGNACION
    (5) INSTRUCCION -> . IFINSTR
    (6) INSTRUCCION -> . WHILEINSTR
    (7) INSTRUCCION -> . PRINTINSTR
    (8) ASIGNACION -> . INT ID IGUAL EXPRESION
    (9) ASIGNACION -> . STRING ID IGUAL CADENA
    (10) ASIGNACION -> . FLOAT ID IGUAL EXPRESION
    (15) IFINSTR -> . IF CONDICION APERTUPAR ListaInstrucciones CIERREPAR
    (17) WHILEINSTR -> . WHILE CONDICION APERTUPAR ListaInstrucciones CIERREPAR
    (18) PRINTINSTR -> . PRINT APERTUPAR CADENA CIERREPAR
    (19) PRINTINSTR -> . PRINT APERTUPAR EXPRESION CIERREPAR

    FIN             shift and go to state 16
    INT             shift and go to state 10
    STRING          shift and go to state 11
    FLOAT           shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    PRINT           shift and go to state 15

    INSTRUCCION                    shift and go to state 17
    ASIGNACION                     shift and go to state 6
    IFINSTR                        shift and go to state 7
    WHILEINSTR                     shift and go to state 8
    PRINTINSTR                     shift and go to state 9

state 5

    (2) ListaInstrucciones -> INSTRUCCION .

    FIN             reduce using rule 2 (ListaInstrucciones -> INSTRUCCION .)
    INT             reduce using rule 2 (ListaInstrucciones -> INSTRUCCION .)
    STRING          reduce using rule 2 (ListaInstrucciones -> INSTRUCCION .)
    FLOAT           reduce using rule 2 (ListaInstrucciones -> INSTRUCCION .)
    IF              reduce using rule 2 (ListaInstrucciones -> INSTRUCCION .)
    WHILE           reduce using rule 2 (ListaInstrucciones -> INSTRUCCION .)
    PRINT           reduce using rule 2 (ListaInstrucciones -> INSTRUCCION .)
    CIERREPAR       reduce using rule 2 (ListaInstrucciones -> INSTRUCCION .)


state 6

    (4) INSTRUCCION -> ASIGNACION .

    FIN             reduce using rule 4 (INSTRUCCION -> ASIGNACION .)
    INT             reduce using rule 4 (INSTRUCCION -> ASIGNACION .)
    STRING          reduce using rule 4 (INSTRUCCION -> ASIGNACION .)
    FLOAT           reduce using rule 4 (INSTRUCCION -> ASIGNACION .)
    IF              reduce using rule 4 (INSTRUCCION -> ASIGNACION .)
    WHILE           reduce using rule 4 (INSTRUCCION -> ASIGNACION .)
    PRINT           reduce using rule 4 (INSTRUCCION -> ASIGNACION .)
    CIERREPAR       reduce using rule 4 (INSTRUCCION -> ASIGNACION .)


state 7

    (5) INSTRUCCION -> IFINSTR .

    FIN             reduce using rule 5 (INSTRUCCION -> IFINSTR .)
    INT             reduce using rule 5 (INSTRUCCION -> IFINSTR .)
    STRING          reduce using rule 5 (INSTRUCCION -> IFINSTR .)
    FLOAT           reduce using rule 5 (INSTRUCCION -> IFINSTR .)
    IF              reduce using rule 5 (INSTRUCCION -> IFINSTR .)
    WHILE           reduce using rule 5 (INSTRUCCION -> IFINSTR .)
    PRINT           reduce using rule 5 (INSTRUCCION -> IFINSTR .)
    CIERREPAR       reduce using rule 5 (INSTRUCCION -> IFINSTR .)


state 8

    (6) INSTRUCCION -> WHILEINSTR .

    FIN             reduce using rule 6 (INSTRUCCION -> WHILEINSTR .)
    INT             reduce using rule 6 (INSTRUCCION -> WHILEINSTR .)
    STRING          reduce using rule 6 (INSTRUCCION -> WHILEINSTR .)
    FLOAT           reduce using rule 6 (INSTRUCCION -> WHILEINSTR .)
    IF              reduce using rule 6 (INSTRUCCION -> WHILEINSTR .)
    WHILE           reduce using rule 6 (INSTRUCCION -> WHILEINSTR .)
    PRINT           reduce using rule 6 (INSTRUCCION -> WHILEINSTR .)
    CIERREPAR       reduce using rule 6 (INSTRUCCION -> WHILEINSTR .)


state 9

    (7) INSTRUCCION -> PRINTINSTR .

    FIN             reduce using rule 7 (INSTRUCCION -> PRINTINSTR .)
    INT             reduce using rule 7 (INSTRUCCION -> PRINTINSTR .)
    STRING          reduce using rule 7 (INSTRUCCION -> PRINTINSTR .)
    FLOAT           reduce using rule 7 (INSTRUCCION -> PRINTINSTR .)
    IF              reduce using rule 7 (INSTRUCCION -> PRINTINSTR .)
    WHILE           reduce using rule 7 (INSTRUCCION -> PRINTINSTR .)
    PRINT           reduce using rule 7 (INSTRUCCION -> PRINTINSTR .)
    CIERREPAR       reduce using rule 7 (INSTRUCCION -> PRINTINSTR .)


state 10

    (8) ASIGNACION -> INT . ID IGUAL EXPRESION

    ID              shift and go to state 18


state 11

    (9) ASIGNACION -> STRING . ID IGUAL CADENA

    ID              shift and go to state 19


state 12

    (10) ASIGNACION -> FLOAT . ID IGUAL EXPRESION

    ID              shift and go to state 20


state 13

    (15) IFINSTR -> IF . CONDICION APERTUPAR ListaInstrucciones CIERREPAR
    (16) CONDICION -> . APERTUPAR EXPRESION OPRELAC EXPRESION CIERREPAR

    APERTUPAR       shift and go to state 22

    CONDICION                      shift and go to state 21

state 14

    (17) WHILEINSTR -> WHILE . CONDICION APERTUPAR ListaInstrucciones CIERREPAR
    (16) CONDICION -> . APERTUPAR EXPRESION OPRELAC EXPRESION CIERREPAR

    APERTUPAR       shift and go to state 22

    CONDICION                      shift and go to state 23

state 15

    (18) PRINTINSTR -> PRINT . APERTUPAR CADENA CIERREPAR
    (19) PRINTINSTR -> PRINT . APERTUPAR EXPRESION CIERREPAR

    APERTUPAR       shift and go to state 24


state 16

    (1) Programa -> INICIO ID ListaInstrucciones FIN .

    $end            reduce using rule 1 (Programa -> INICIO ID ListaInstrucciones FIN .)


state 17

    (3) ListaInstrucciones -> ListaInstrucciones INSTRUCCION .

    FIN             reduce using rule 3 (ListaInstrucciones -> ListaInstrucciones INSTRUCCION .)
    INT             reduce using rule 3 (ListaInstrucciones -> ListaInstrucciones INSTRUCCION .)
    STRING          reduce using rule 3 (ListaInstrucciones -> ListaInstrucciones INSTRUCCION .)
    FLOAT           reduce using rule 3 (ListaInstrucciones -> ListaInstrucciones INSTRUCCION .)
    IF              reduce using rule 3 (ListaInstrucciones -> ListaInstrucciones INSTRUCCION .)
    WHILE           reduce using rule 3 (ListaInstrucciones -> ListaInstrucciones INSTRUCCION .)
    PRINT           reduce using rule 3 (ListaInstrucciones -> ListaInstrucciones INSTRUCCION .)
    CIERREPAR       reduce using rule 3 (ListaInstrucciones -> ListaInstrucciones INSTRUCCION .)


state 18

    (8) ASIGNACION -> INT ID . IGUAL EXPRESION

    IGUAL           shift and go to state 25


state 19

    (9) ASIGNACION -> STRING ID . IGUAL CADENA

    IGUAL           shift and go to state 26


state 20

    (10) ASIGNACION -> FLOAT ID . IGUAL EXPRESION

    IGUAL           shift and go to state 27


state 21

    (15) IFINSTR -> IF CONDICION . APERTUPAR ListaInstrucciones CIERREPAR

    APERTUPAR       shift and go to state 28


state 22

    (16) CONDICION -> APERTUPAR . EXPRESION OPRELAC EXPRESION CIERREPAR
    (11) EXPRESION -> . NUM
    (12) EXPRESION -> . ID
    (13) EXPRESION -> . OPERACION
    (14) OPERACION -> . EXPRESION OPARIT EXPRESION

    NUM             shift and go to state 30
    ID              shift and go to state 31

    EXPRESION                      shift and go to state 29
    OPERACION                      shift and go to state 32

state 23

    (17) WHILEINSTR -> WHILE CONDICION . APERTUPAR ListaInstrucciones CIERREPAR

    APERTUPAR       shift and go to state 33


state 24

    (18) PRINTINSTR -> PRINT APERTUPAR . CADENA CIERREPAR
    (19) PRINTINSTR -> PRINT APERTUPAR . EXPRESION CIERREPAR
    (11) EXPRESION -> . NUM
    (12) EXPRESION -> . ID
    (13) EXPRESION -> . OPERACION
    (14) OPERACION -> . EXPRESION OPARIT EXPRESION

    CADENA          shift and go to state 34
    NUM             shift and go to state 30
    ID              shift and go to state 31

    EXPRESION                      shift and go to state 35
    OPERACION                      shift and go to state 32

state 25

    (8) ASIGNACION -> INT ID IGUAL . EXPRESION
    (11) EXPRESION -> . NUM
    (12) EXPRESION -> . ID
    (13) EXPRESION -> . OPERACION
    (14) OPERACION -> . EXPRESION OPARIT EXPRESION

    NUM             shift and go to state 30
    ID              shift and go to state 31

    EXPRESION                      shift and go to state 36
    OPERACION                      shift and go to state 32

state 26

    (9) ASIGNACION -> STRING ID IGUAL . CADENA

    CADENA          shift and go to state 37


state 27

    (10) ASIGNACION -> FLOAT ID IGUAL . EXPRESION
    (11) EXPRESION -> . NUM
    (12) EXPRESION -> . ID
    (13) EXPRESION -> . OPERACION
    (14) OPERACION -> . EXPRESION OPARIT EXPRESION

    NUM             shift and go to state 30
    ID              shift and go to state 31

    EXPRESION                      shift and go to state 38
    OPERACION                      shift and go to state 32

state 28

    (15) IFINSTR -> IF CONDICION APERTUPAR . ListaInstrucciones CIERREPAR
    (2) ListaInstrucciones -> . INSTRUCCION
    (3) ListaInstrucciones -> . ListaInstrucciones INSTRUCCION
    (4) INSTRUCCION -> . ASIGNACION
    (5) INSTRUCCION -> . IFINSTR
    (6) INSTRUCCION -> . WHILEINSTR
    (7) INSTRUCCION -> . PRINTINSTR
    (8) ASIGNACION -> . INT ID IGUAL EXPRESION
    (9) ASIGNACION -> . STRING ID IGUAL CADENA
    (10) ASIGNACION -> . FLOAT ID IGUAL EXPRESION
    (15) IFINSTR -> . IF CONDICION APERTUPAR ListaInstrucciones CIERREPAR
    (17) WHILEINSTR -> . WHILE CONDICION APERTUPAR ListaInstrucciones CIERREPAR
    (18) PRINTINSTR -> . PRINT APERTUPAR CADENA CIERREPAR
    (19) PRINTINSTR -> . PRINT APERTUPAR EXPRESION CIERREPAR

    INT             shift and go to state 10
    STRING          shift and go to state 11
    FLOAT           shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    PRINT           shift and go to state 15

    ListaInstrucciones             shift and go to state 39
    INSTRUCCION                    shift and go to state 5
    ASIGNACION                     shift and go to state 6
    IFINSTR                        shift and go to state 7
    WHILEINSTR                     shift and go to state 8
    PRINTINSTR                     shift and go to state 9

state 29

    (16) CONDICION -> APERTUPAR EXPRESION . OPRELAC EXPRESION CIERREPAR
    (14) OPERACION -> EXPRESION . OPARIT EXPRESION

    OPRELAC         shift and go to state 40
    OPARIT          shift and go to state 41


state 30

    (11) EXPRESION -> NUM .

    OPRELAC         reduce using rule 11 (EXPRESION -> NUM .)
    OPARIT          reduce using rule 11 (EXPRESION -> NUM .)
    CIERREPAR       reduce using rule 11 (EXPRESION -> NUM .)
    FIN             reduce using rule 11 (EXPRESION -> NUM .)
    INT             reduce using rule 11 (EXPRESION -> NUM .)
    STRING          reduce using rule 11 (EXPRESION -> NUM .)
    FLOAT           reduce using rule 11 (EXPRESION -> NUM .)
    IF              reduce using rule 11 (EXPRESION -> NUM .)
    WHILE           reduce using rule 11 (EXPRESION -> NUM .)
    PRINT           reduce using rule 11 (EXPRESION -> NUM .)


state 31

    (12) EXPRESION -> ID .

    OPRELAC         reduce using rule 12 (EXPRESION -> ID .)
    OPARIT          reduce using rule 12 (EXPRESION -> ID .)
    CIERREPAR       reduce using rule 12 (EXPRESION -> ID .)
    FIN             reduce using rule 12 (EXPRESION -> ID .)
    INT             reduce using rule 12 (EXPRESION -> ID .)
    STRING          reduce using rule 12 (EXPRESION -> ID .)
    FLOAT           reduce using rule 12 (EXPRESION -> ID .)
    IF              reduce using rule 12 (EXPRESION -> ID .)
    WHILE           reduce using rule 12 (EXPRESION -> ID .)
    PRINT           reduce using rule 12 (EXPRESION -> ID .)


state 32

    (13) EXPRESION -> OPERACION .

    OPRELAC         reduce using rule 13 (EXPRESION -> OPERACION .)
    OPARIT          reduce using rule 13 (EXPRESION -> OPERACION .)
    CIERREPAR       reduce using rule 13 (EXPRESION -> OPERACION .)
    FIN             reduce using rule 13 (EXPRESION -> OPERACION .)
    INT             reduce using rule 13 (EXPRESION -> OPERACION .)
    STRING          reduce using rule 13 (EXPRESION -> OPERACION .)
    FLOAT           reduce using rule 13 (EXPRESION -> OPERACION .)
    IF              reduce using rule 13 (EXPRESION -> OPERACION .)
    WHILE           reduce using rule 13 (EXPRESION -> OPERACION .)
    PRINT           reduce using rule 13 (EXPRESION -> OPERACION .)


state 33

    (17) WHILEINSTR -> WHILE CONDICION APERTUPAR . ListaInstrucciones CIERREPAR
    (2) ListaInstrucciones -> . INSTRUCCION
    (3) ListaInstrucciones -> . ListaInstrucciones INSTRUCCION
    (4) INSTRUCCION -> . ASIGNACION
    (5) INSTRUCCION -> . IFINSTR
    (6) INSTRUCCION -> . WHILEINSTR
    (7) INSTRUCCION -> . PRINTINSTR
    (8) ASIGNACION -> . INT ID IGUAL EXPRESION
    (9) ASIGNACION -> . STRING ID IGUAL CADENA
    (10) ASIGNACION -> . FLOAT ID IGUAL EXPRESION
    (15) IFINSTR -> . IF CONDICION APERTUPAR ListaInstrucciones CIERREPAR
    (17) WHILEINSTR -> . WHILE CONDICION APERTUPAR ListaInstrucciones CIERREPAR
    (18) PRINTINSTR -> . PRINT APERTUPAR CADENA CIERREPAR
    (19) PRINTINSTR -> . PRINT APERTUPAR EXPRESION CIERREPAR

    INT             shift and go to state 10
    STRING          shift and go to state 11
    FLOAT           shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    PRINT           shift and go to state 15

    ListaInstrucciones             shift and go to state 42
    INSTRUCCION                    shift and go to state 5
    ASIGNACION                     shift and go to state 6
    IFINSTR                        shift and go to state 7
    WHILEINSTR                     shift and go to state 8
    PRINTINSTR                     shift and go to state 9

state 34

    (18) PRINTINSTR -> PRINT APERTUPAR CADENA . CIERREPAR

    CIERREPAR       shift and go to state 43


state 35

    (19) PRINTINSTR -> PRINT APERTUPAR EXPRESION . CIERREPAR
    (14) OPERACION -> EXPRESION . OPARIT EXPRESION

    CIERREPAR       shift and go to state 44
    OPARIT          shift and go to state 41


state 36

    (8) ASIGNACION -> INT ID IGUAL EXPRESION .
    (14) OPERACION -> EXPRESION . OPARIT EXPRESION

    FIN             reduce using rule 8 (ASIGNACION -> INT ID IGUAL EXPRESION .)
    INT             reduce using rule 8 (ASIGNACION -> INT ID IGUAL EXPRESION .)
    STRING          reduce using rule 8 (ASIGNACION -> INT ID IGUAL EXPRESION .)
    FLOAT           reduce using rule 8 (ASIGNACION -> INT ID IGUAL EXPRESION .)
    IF              reduce using rule 8 (ASIGNACION -> INT ID IGUAL EXPRESION .)
    WHILE           reduce using rule 8 (ASIGNACION -> INT ID IGUAL EXPRESION .)
    PRINT           reduce using rule 8 (ASIGNACION -> INT ID IGUAL EXPRESION .)
    CIERREPAR       reduce using rule 8 (ASIGNACION -> INT ID IGUAL EXPRESION .)
    OPARIT          shift and go to state 41


state 37

    (9) ASIGNACION -> STRING ID IGUAL CADENA .

    FIN             reduce using rule 9 (ASIGNACION -> STRING ID IGUAL CADENA .)
    INT             reduce using rule 9 (ASIGNACION -> STRING ID IGUAL CADENA .)
    STRING          reduce using rule 9 (ASIGNACION -> STRING ID IGUAL CADENA .)
    FLOAT           reduce using rule 9 (ASIGNACION -> STRING ID IGUAL CADENA .)
    IF              reduce using rule 9 (ASIGNACION -> STRING ID IGUAL CADENA .)
    WHILE           reduce using rule 9 (ASIGNACION -> STRING ID IGUAL CADENA .)
    PRINT           reduce using rule 9 (ASIGNACION -> STRING ID IGUAL CADENA .)
    CIERREPAR       reduce using rule 9 (ASIGNACION -> STRING ID IGUAL CADENA .)


state 38

    (10) ASIGNACION -> FLOAT ID IGUAL EXPRESION .
    (14) OPERACION -> EXPRESION . OPARIT EXPRESION

    FIN             reduce using rule 10 (ASIGNACION -> FLOAT ID IGUAL EXPRESION .)
    INT             reduce using rule 10 (ASIGNACION -> FLOAT ID IGUAL EXPRESION .)
    STRING          reduce using rule 10 (ASIGNACION -> FLOAT ID IGUAL EXPRESION .)
    FLOAT           reduce using rule 10 (ASIGNACION -> FLOAT ID IGUAL EXPRESION .)
    IF              reduce using rule 10 (ASIGNACION -> FLOAT ID IGUAL EXPRESION .)
    WHILE           reduce using rule 10 (ASIGNACION -> FLOAT ID IGUAL EXPRESION .)
    PRINT           reduce using rule 10 (ASIGNACION -> FLOAT ID IGUAL EXPRESION .)
    CIERREPAR       reduce using rule 10 (ASIGNACION -> FLOAT ID IGUAL EXPRESION .)
    OPARIT          shift and go to state 41


state 39

    (15) IFINSTR -> IF CONDICION APERTUPAR ListaInstrucciones . CIERREPAR
    (3) ListaInstrucciones -> ListaInstrucciones . INSTRUCCION
    (4) INSTRUCCION -> . ASIGNACION
    (5) INSTRUCCION -> . IFINSTR
    (6) INSTRUCCION -> . WHILEINSTR
    (7) INSTRUCCION -> . PRINTINSTR
    (8) ASIGNACION -> . INT ID IGUAL EXPRESION
    (9) ASIGNACION -> . STRING ID IGUAL CADENA
    (10) ASIGNACION -> . FLOAT ID IGUAL EXPRESION
    (15) IFINSTR -> . IF CONDICION APERTUPAR ListaInstrucciones CIERREPAR
    (17) WHILEINSTR -> . WHILE CONDICION APERTUPAR ListaInstrucciones CIERREPAR
    (18) PRINTINSTR -> . PRINT APERTUPAR CADENA CIERREPAR
    (19) PRINTINSTR -> . PRINT APERTUPAR EXPRESION CIERREPAR

    CIERREPAR       shift and go to state 45
    INT             shift and go to state 10
    STRING          shift and go to state 11
    FLOAT           shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    PRINT           shift and go to state 15

    INSTRUCCION                    shift and go to state 17
    ASIGNACION                     shift and go to state 6
    IFINSTR                        shift and go to state 7
    WHILEINSTR                     shift and go to state 8
    PRINTINSTR                     shift and go to state 9

state 40

    (16) CONDICION -> APERTUPAR EXPRESION OPRELAC . EXPRESION CIERREPAR
    (11) EXPRESION -> . NUM
    (12) EXPRESION -> . ID
    (13) EXPRESION -> . OPERACION
    (14) OPERACION -> . EXPRESION OPARIT EXPRESION

    NUM             shift and go to state 30
    ID              shift and go to state 31

    EXPRESION                      shift and go to state 46
    OPERACION                      shift and go to state 32

state 41

    (14) OPERACION -> EXPRESION OPARIT . EXPRESION
    (11) EXPRESION -> . NUM
    (12) EXPRESION -> . ID
    (13) EXPRESION -> . OPERACION
    (14) OPERACION -> . EXPRESION OPARIT EXPRESION

    NUM             shift and go to state 30
    ID              shift and go to state 31

    EXPRESION                      shift and go to state 47
    OPERACION                      shift and go to state 32

state 42

    (17) WHILEINSTR -> WHILE CONDICION APERTUPAR ListaInstrucciones . CIERREPAR
    (3) ListaInstrucciones -> ListaInstrucciones . INSTRUCCION
    (4) INSTRUCCION -> . ASIGNACION
    (5) INSTRUCCION -> . IFINSTR
    (6) INSTRUCCION -> . WHILEINSTR
    (7) INSTRUCCION -> . PRINTINSTR
    (8) ASIGNACION -> . INT ID IGUAL EXPRESION
    (9) ASIGNACION -> . STRING ID IGUAL CADENA
    (10) ASIGNACION -> . FLOAT ID IGUAL EXPRESION
    (15) IFINSTR -> . IF CONDICION APERTUPAR ListaInstrucciones CIERREPAR
    (17) WHILEINSTR -> . WHILE CONDICION APERTUPAR ListaInstrucciones CIERREPAR
    (18) PRINTINSTR -> . PRINT APERTUPAR CADENA CIERREPAR
    (19) PRINTINSTR -> . PRINT APERTUPAR EXPRESION CIERREPAR

    CIERREPAR       shift and go to state 48
    INT             shift and go to state 10
    STRING          shift and go to state 11
    FLOAT           shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    PRINT           shift and go to state 15

    INSTRUCCION                    shift and go to state 17
    ASIGNACION                     shift and go to state 6
    IFINSTR                        shift and go to state 7
    WHILEINSTR                     shift and go to state 8
    PRINTINSTR                     shift and go to state 9

state 43

    (18) PRINTINSTR -> PRINT APERTUPAR CADENA CIERREPAR .

    FIN             reduce using rule 18 (PRINTINSTR -> PRINT APERTUPAR CADENA CIERREPAR .)
    INT             reduce using rule 18 (PRINTINSTR -> PRINT APERTUPAR CADENA CIERREPAR .)
    STRING          reduce using rule 18 (PRINTINSTR -> PRINT APERTUPAR CADENA CIERREPAR .)
    FLOAT           reduce using rule 18 (PRINTINSTR -> PRINT APERTUPAR CADENA CIERREPAR .)
    IF              reduce using rule 18 (PRINTINSTR -> PRINT APERTUPAR CADENA CIERREPAR .)
    WHILE           reduce using rule 18 (PRINTINSTR -> PRINT APERTUPAR CADENA CIERREPAR .)
    PRINT           reduce using rule 18 (PRINTINSTR -> PRINT APERTUPAR CADENA CIERREPAR .)
    CIERREPAR       reduce using rule 18 (PRINTINSTR -> PRINT APERTUPAR CADENA CIERREPAR .)


state 44

    (19) PRINTINSTR -> PRINT APERTUPAR EXPRESION CIERREPAR .

    FIN             reduce using rule 19 (PRINTINSTR -> PRINT APERTUPAR EXPRESION CIERREPAR .)
    INT             reduce using rule 19 (PRINTINSTR -> PRINT APERTUPAR EXPRESION CIERREPAR .)
    STRING          reduce using rule 19 (PRINTINSTR -> PRINT APERTUPAR EXPRESION CIERREPAR .)
    FLOAT           reduce using rule 19 (PRINTINSTR -> PRINT APERTUPAR EXPRESION CIERREPAR .)
    IF              reduce using rule 19 (PRINTINSTR -> PRINT APERTUPAR EXPRESION CIERREPAR .)
    WHILE           reduce using rule 19 (PRINTINSTR -> PRINT APERTUPAR EXPRESION CIERREPAR .)
    PRINT           reduce using rule 19 (PRINTINSTR -> PRINT APERTUPAR EXPRESION CIERREPAR .)
    CIERREPAR       reduce using rule 19 (PRINTINSTR -> PRINT APERTUPAR EXPRESION CIERREPAR .)


state 45

    (15) IFINSTR -> IF CONDICION APERTUPAR ListaInstrucciones CIERREPAR .

    FIN             reduce using rule 15 (IFINSTR -> IF CONDICION APERTUPAR ListaInstrucciones CIERREPAR .)
    INT             reduce using rule 15 (IFINSTR -> IF CONDICION APERTUPAR ListaInstrucciones CIERREPAR .)
    STRING          reduce using rule 15 (IFINSTR -> IF CONDICION APERTUPAR ListaInstrucciones CIERREPAR .)
    FLOAT           reduce using rule 15 (IFINSTR -> IF CONDICION APERTUPAR ListaInstrucciones CIERREPAR .)
    IF              reduce using rule 15 (IFINSTR -> IF CONDICION APERTUPAR ListaInstrucciones CIERREPAR .)
    WHILE           reduce using rule 15 (IFINSTR -> IF CONDICION APERTUPAR ListaInstrucciones CIERREPAR .)
    PRINT           reduce using rule 15 (IFINSTR -> IF CONDICION APERTUPAR ListaInstrucciones CIERREPAR .)
    CIERREPAR       reduce using rule 15 (IFINSTR -> IF CONDICION APERTUPAR ListaInstrucciones CIERREPAR .)


state 46

    (16) CONDICION -> APERTUPAR EXPRESION OPRELAC EXPRESION . CIERREPAR
    (14) OPERACION -> EXPRESION . OPARIT EXPRESION

    CIERREPAR       shift and go to state 49
    OPARIT          shift and go to state 41


state 47

    (14) OPERACION -> EXPRESION OPARIT EXPRESION .
    (14) OPERACION -> EXPRESION . OPARIT EXPRESION

  ! shift/reduce conflict for OPARIT resolved as shift
    OPRELAC         reduce using rule 14 (OPERACION -> EXPRESION OPARIT EXPRESION .)
    CIERREPAR       reduce using rule 14 (OPERACION -> EXPRESION OPARIT EXPRESION .)
    FIN             reduce using rule 14 (OPERACION -> EXPRESION OPARIT EXPRESION .)
    INT             reduce using rule 14 (OPERACION -> EXPRESION OPARIT EXPRESION .)
    STRING          reduce using rule 14 (OPERACION -> EXPRESION OPARIT EXPRESION .)
    FLOAT           reduce using rule 14 (OPERACION -> EXPRESION OPARIT EXPRESION .)
    IF              reduce using rule 14 (OPERACION -> EXPRESION OPARIT EXPRESION .)
    WHILE           reduce using rule 14 (OPERACION -> EXPRESION OPARIT EXPRESION .)
    PRINT           reduce using rule 14 (OPERACION -> EXPRESION OPARIT EXPRESION .)
    OPARIT          shift and go to state 41

  ! OPARIT          [ reduce using rule 14 (OPERACION -> EXPRESION OPARIT EXPRESION .) ]


state 48

    (17) WHILEINSTR -> WHILE CONDICION APERTUPAR ListaInstrucciones CIERREPAR .

    FIN             reduce using rule 17 (WHILEINSTR -> WHILE CONDICION APERTUPAR ListaInstrucciones CIERREPAR .)
    INT             reduce using rule 17 (WHILEINSTR -> WHILE CONDICION APERTUPAR ListaInstrucciones CIERREPAR .)
    STRING          reduce using rule 17 (WHILEINSTR -> WHILE CONDICION APERTUPAR ListaInstrucciones CIERREPAR .)
    FLOAT           reduce using rule 17 (WHILEINSTR -> WHILE CONDICION APERTUPAR ListaInstrucciones CIERREPAR .)
    IF              reduce using rule 17 (WHILEINSTR -> WHILE CONDICION APERTUPAR ListaInstrucciones CIERREPAR .)
    WHILE           reduce using rule 17 (WHILEINSTR -> WHILE CONDICION APERTUPAR ListaInstrucciones CIERREPAR .)
    PRINT           reduce using rule 17 (WHILEINSTR -> WHILE CONDICION APERTUPAR ListaInstrucciones CIERREPAR .)
    CIERREPAR       reduce using rule 17 (WHILEINSTR -> WHILE CONDICION APERTUPAR ListaInstrucciones CIERREPAR .)


state 49

    (16) CONDICION -> APERTUPAR EXPRESION OPRELAC EXPRESION CIERREPAR .

    APERTUPAR       reduce using rule 16 (CONDICION -> APERTUPAR EXPRESION OPRELAC EXPRESION CIERREPAR .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for OPARIT in state 47 resolved as shift
